tests/baselines/reference/spreadEnum5.errors.txt
tests/cases/conformance/enums/spreadEnum5.ts(12,8): error TS1392: Spread enum member cannot reference to const enum without 'preserveConstEnums' flag.
tests/cases/conformance/enums/spreadEnum5.ts(17,8): error TS1396: Spread enum member cannot reference to non-const enum inside const enum declaration without 'preserveConstEnums' flag.


==== tests/cases/conformance/enums/spreadEnum5.ts (2 errors) ====
    enum LiteralEnum1 {
        A,
        B
    }
    
    const enum ConstEnum {
        A = 'A',
        B = 'B'
    }
    
    enum R1 {
        ...ConstEnum,
           ~~~~~~~~~
!!! error TS1392: Spread enum member cannot reference to const enum without 'preserveConstEnums' flag.
        R1 = 'R1'
    }
    
    const enum R2 {
        ...LiteralEnum1,
           ~~~~~~~~~~~~
!!! error TS1396: Spread enum member cannot reference to non-const enum inside const enum declaration without 'preserveConstEnums' flag.
        R2 = 'R2'
    }
    
    const enum R3 {
        ...ConstEnum,
        R3 = 'R3'
    }
    
    LiteralEnum1.A;
    LiteralEnum1.B;
    ConstEnum.A;
    ConstEnum.B;
    R1.A;
    R1.B;
    R1.R1;
    R2.A;
    R2.B;
    R2.R2;
    R3.A;
    R3.B;
    R3.R3;
    